# hud-tau2

./: .gitignore  Dockerfile  Dockerfile.hud  all.json  env.py  full_test.py  hud.lock.yaml  local_tasks.json  local_test.py  pyproject.toml  remote_test.py  run_airline.py  run_retail.py  run_telecom.py  test_airline_task.json  test_startup.sh  test_telecom.py  test_telecom_task.json
environment/: __init__.py  run_server.py  server.py  toolkit.py
loop/: __init__.py  agent_config.py  multi_turn.py
prompts/: __init__.py  assistant_prompts.py  user_prompts.py
scripts/: start_environment_server.sh
server/: agent_loop.py  main.py  scenarios.py  state.py
server/evaluate/: eval.py
server/setup/: load.py
server/tools/: _wrapper.py  conversation.py  conversation_new.py  http_client.py  http_tool.py  message_log.py  test_http_tool.py
task/: _system_prompt.py  task.py
