[project]
name = "hud-tau2-bench"
version = "0.1.0"
description = "HUD MCP server for tau2-bench evaluation tasks"
requires-python = ">=3.11"
dependencies = [
    "hud-python",
    "fastapi",
    "google-api-python-client",
    "google-auth",
    "anthropic",
    "google",
    "google-genai"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["server", "task"]
